unit_tests/coverage.suite/lslparse-err-27.err
<1,1,1,2&2>;
        ^
(Line 2 char 9): ERROR: Syntax error
