unit_tests/coverage.suite/lslparse-err-27.lsl
f(){rotation r =
<1,1,1,2&2>;
}
